--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-lali.se
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LALI.SE - Underhåll</title>
+  <style>
+    /* Fullskärm och centrerat innehåll */
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f5f5f5; /* ljusgrå bakgrund */
+      color: #333;
+    }
+
+    .message {
+      text-align: center;
+      font-size: 1.5rem;
+      line-height: 1.6;
+    }
+
+    /* Liten stilförbättring */
+    .message span {
+      display: block;
+      margin-top: 0.5rem;
+      color: #666;
+      font-size: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="message">
+    Webbsidan <strong>LALI.SE</strong> vilar för tillfället
+    <span>Vi är snart tillbaka!</span>
+  </div>
+</body>
+</html>
