--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LALI.SE - Underhåll</title>
+  <title>LALI.SE</title>
   <style>
     /* Fullskärm och centrerat innehåll */
     html, body {
@@ -35,7 +35,7 @@
 <body>
   <div class="message">
     Webbsidan <strong>LALI.SE</strong> vilar för tillfället
-    <span>Vi är snart tillbaka!</span>
+    <span>På återseende!</span>
   </div>
 </body>
 </html>
