Update 404 message to indicate file not found

--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>404</h1>
-  <p>Webbsidan LALI.SE vilar för tillfället.</p>
+  <p>Filen finns inte</p>
   <p><a href="/">Tillbaka till startsidan</a></p>
 </body>
 </html>
